--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=WeDemBoyzzzzzzzz
+APP_FILE_FOLDER=/Users/ibou/bin/www/rendezvous/public/files
 
 DB_HOST=localhost
 DB_DATABASE=rendezvous_dev
@@ -16,3 +17,4 @@ MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
+
