--- a/.env
+++ b/.env
@@ -13,8 +13,9 @@ SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.mandrillapp.com
+MAIL_PORT=587
+MAIL_USERNAME=ib.toure@gmail.com
+MAIL_PASSWORD=a_WxA1b5NKfb-d--0PWWNw
+MAIL_TO=ib.toure@gmail.com
 
