--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=WeDemBoyzzzzzzzz
 APP_FILE_FOLDER=/Users/ibou/bin/www/rendezvous/public/files
+APP_IMG_FOLDER=/Users/ibou/bin/www/rendezvous/public/img
 
 DB_HOST=localhost
 DB_DATABASE=rendezvous_dev
