--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=WeDemBoyzzzzzzzz
-APP_FILE_FOLDER=/Users/ibou/bin/www/rendezvous/public/files
-APP_IMG_FOLDER=/Users/ibou/bin/www/rendezvous/public/img
+APP_FILE_FOLDER=/var/www/dev.nabantoo.com/htdocs/public/files
+APP_IMG_FOLDER=/var/www/dev.nabantoo.com/htdocs/public/img
 
 DB_HOST=localhost
 DB_DATABASE=rendezvous_dev
